--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mssql": "^10.0.1",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
